package com.kna.vstay.enums;

public enum Role {
}
